comments are italic

--- a/styles/base.less
+++ b/styles/base.less
@@ -58,6 +58,7 @@
 
 .comment {
   color: darken(@sea, 15%);
+  font-style: italic;
 }
 
 .entity {
@@ -140,6 +141,7 @@
   &.definition {
     &.comment {
       color: @syntax-text-color;
+      font-style: italic;
     }
 
     &.string,
